Add flashcard and data

--- a/flashcard-list.html
+++ b/flashcard-list.html
@@ -2,26 +2,21 @@
 <html>
 
 <head>
-    <title>Study English</title>
+    <title>4000 essential english words</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/master.css">
-    <style>
-        a {
-            color: #424242;
-            font-size: x-large;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="css/flashcard-list.css">
 </head>
 
 <body>
-    <h1>Study English</h1><br />
+    <h1>4000 essential english words</h1><br />
     <div class="container" id="book-container">
-        <p><a href="flashcard-list.html">4000 essential english words</a></p>
-        <p><a href="sentences.html">Sentences</a></p>
     </div>
+
+    <script type="text/javascript" src="scripts/flashcard-list.js"></script>
+
 </body>
 
 </html>
