--- a/flashcard.html
+++ b/flashcard.html
@@ -20,13 +20,13 @@
 
         <div class="row">
             <div class="col">
-                <button class="btn btn-info" onclick="rate(1)">Again</button>
+                <button class="btn btn-danger" onclick="rate(1)">Again</button>
             </div>
             <div class="col">
-                <button class="btn btn-info" onclick="rate(2)">Hard</button>
+                <button class="btn btn-warning" onclick="rate(2)">Hard</button>
             </div>
             <div class="col">
-                <button class="btn btn-info" onclick="rate(3)">Good</button>
+                <button class="btn btn-success" onclick="rate(3)">Good</button>
             </div>
             <div class="col">
                 <button class="btn btn-info" onclick="rate(4)">Easy</button>
