Add quiz and story

--- a/flashcard-list.html
+++ b/flashcard-list.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>4000 essential english words</h1><br />
+    <h1>4000 essential english words</h1>
     <div class="container" id="book-container">
     </div>
 
