--- a/flashcard.html
+++ b/flashcard.html
@@ -32,15 +32,18 @@
                 <button class="btn btn-info" onclick="rate(4)">Easy</button>
             </div>
         </div>
-        
-        <!-- <div class="row">
+
+        <div class="row" style="margin-top: 15px;">
             <div class="col">
-                <button class="btn btn-info" id="prev-btn" onclick="previous()">Prev</button>
+                <button class="btn btn-purple" onclick="openQuiz()">Quiz</button>
             </div>
             <div class="col">
-                <button class="btn btn-info" id="next-btn" onclick="next()">Next</button>
+                <button class="btn btn-orange" onclick="openStory()">Story</button>
             </div>
-        </div> -->
+            <div class="col">
+                <button class="btn btn-basic" onclick="removeCard()">Remove</button>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="scripts/flashcard.js"></script>
