Fix quiz and refactor

--- a/vocabularies.html
+++ b/vocabularies.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Vocabularies</h1><br />
+    <h1>Vocabularies</h1>
     <div class="container" id="vocabularies-container"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
