Update flashcard css

--- a/flashcard.html
+++ b/flashcard.html
@@ -18,29 +18,29 @@
             <div class="card-container" id="card-container"></div>
         </div>
 
-        <div class="row">
-            <div class="col">
+        <div class="row" style="padding: 0 10px;">
+            <div class="col-3 action">
                 <button class="btn btn-danger" onclick="rate(1)">Again</button>
             </div>
-            <div class="col">
+            <div class="col-3 action">
                 <button class="btn btn-warning" onclick="rate(2)">Hard</button>
             </div>
-            <div class="col">
+            <div class="col-3 action">
                 <button class="btn btn-success" onclick="rate(3)">Good</button>
             </div>
-            <div class="col">
+            <div class="col-3 action">
                 <button class="btn btn-info" onclick="rate(4)">Easy</button>
             </div>
         </div>
 
-        <div class="row" style="margin-top: 15px;">
-            <div class="col">
+        <div class="row" style="margin-top: 15px; padding: 0 10px;">
+            <div class="col-4 action">
                 <button class="btn btn-purple" onclick="openQuiz()">Quiz</button>
             </div>
-            <div class="col">
+            <div class="col-4 action">
                 <button class="btn btn-orange" onclick="openStory()">Story</button>
             </div>
-            <div class="col">
+            <div class="col-4 action">
                 <button class="btn btn-basic" onclick="removeCard()">Remove</button>
             </div>
         </div>
