--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1>Study English</h1><br />
+    <h1>Study English</h1>
     <div class="container" id="book-container">
         <p><a href="flashcard-list.html">4000 essential english words</a></p>
         <p><a href="sentences.html">Sentences</a></p>
