Add master code

--- a/flashcard-list.html
+++ b/flashcard-list.html
@@ -12,9 +12,10 @@
 
 <body>
     <h1>4000 essential english words</h1>
-    <div class="container" id="book-container">
+    <div class="container" id="container">
     </div>
 
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/flashcard-list.js"></script>
 
 </body>
