--- a/flashcard.html
+++ b/flashcard.html
@@ -15,7 +15,7 @@
     <div class="container">
         <h1>Flashcards</h1><br />
         <div class="tab-content">
-            <div class="card-container" id="card-container"></div>
+            <div class="card-container" id="container"></div>
         </div>
 
         <div class="row" style="padding: 0 10px;">
@@ -41,11 +41,12 @@
                 <button class="btn btn-orange" onclick="openStory()">Story</button>
             </div>
             <div class="col-4 action">
-                <button class="btn btn-basic" onclick="removeCard()">Remove</button>
+                <button class="btn btn-basic" onclick="memorizeCard()">Memorized</button>
             </div>
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/flashcard.js"></script>
 </body>
 
