--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <h1>Study English</h1>
-    <div class="container" id="book-container">
+    <div class="container" id="container">
         <p><a href="flashcard-list.html">4000 essential english words</a></p>
         <p><a href="sentences.html">Sentences</a></p>
     </div>
