--- a/quiz.html
+++ b/quiz.html
@@ -14,11 +14,13 @@
 <body>
     <div class="container">
         <h1>Quiz</h1>
-        <h6 style="font-weight: bold; color: #007bff">Answered: <span id="total-answered">0</span></h3>
-        <h6 style="font-weight: bold; color: #8bc34a">Correct: <span id="total-correct">0</span></h3>
-        <h6 style="font-weight: bold; color: #f44336">Incorrect: <span id="total-incorrect">0</span></h3>
+        <h6 style="font-weight: bold; color: #007bff">Answered: <span id="total-answered">0</span></h6>
+            <div style="display: inline-flex;">
+                <h6 style="font-weight: bold; color: #f44336">Incorrect: <span id="total-incorrect">0</span></h6>
+                <h6 style="font-weight: bold; color: #8bc34a">Correct: <span id="total-correct">0</span></h6>
+            </div>
         <div class="tab-content">
-            <div id="quiz-container"></div>
+            <div id="container"></div>
             <div class="row" style="margin-top: 15px;">
                 <div class="col-3">
                     <button class="btn btn-info" id="previous" onclick="previous()"><</button>
@@ -33,6 +35,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/quiz.js"></script>
 
 </body>
