--- a/story.html
+++ b/story.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="container">
-        <div class="story-container">
-            <div id="story-container"></div>
+        <div id="container">
         </div>
     </div>
+
 
     <div id="tooltip-popup" class="tooltip-popup">
         <div class="tooltip-popup-content">
@@ -23,6 +23,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/story.js"></script>
 
 </body>
