--- a/story.html
+++ b/story.html
@@ -14,6 +14,10 @@
     <div class="container">
         <div id="container">
         </div>
+        <div class="row" style="margin: 20px 0;">
+            <div class="col pagination" id="pagination" style="padding-left: 0;">
+              </div>
+        </div>
     </div>
 
 
