--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <title>Quiz</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,22 +12,14 @@
 
 <body>
     <div class="container">
-        <h1>Quiz <span id="unit"></span></h1>
-        <h6 style="font-weight: bold; color: #007bff">Answered: <span id="total-answered">0</span></h6>
-            <div style="display: inline-flex;">
-                <h6 style="font-weight: bold; color: #f44336">Incorrect: <span id="total-incorrect">0</span></h6>
-                <h6 style="font-weight: bold; color: #8bc34a">Correct: <span id="total-correct">0</span></h6>
-            </div>
+        <h1 id="unit"></h1>
         <div class="tab-content">
             <div id="container"></div>
             <div class="row" style="margin-top: 15px;">
-                <div class="col-3">
+                <div class="col">
                     <button class="btn btn-info" id="previous" onclick="previous()">&#8592;</button>
                 </div>
-                <div class="col-6">
-                    <button class="btn btn-success" id="submit" onclick="submit()">Check</button>
-                </div>
-                <div class="col-3">
+                <div class="col">
                     <button class="btn btn-info" id="next" onclick="next()">&#8594;</button>
                 </div>
             </div>
