--- a/unit.html
+++ b/unit.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <title>Unit</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>Unit <span id="unit"></span></h1>
+        <h1 id="unit"></h1>
         <div class="tab-content">
             <div class="card-container" id="container"></div>
         </div>
