--- a/vocabularies.html
+++ b/vocabularies.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <title>Vocabularies</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Vocabularies <span id="book"></span></h1>
+    <h1 id="book"></h1>
     <div class="container" id="container"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
