--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         }
 
         .title {
-            background: #2980b9;
+            background: #6745fd;
             border-top-left-radius: 12px;
             border-bottom-left-radius: 12px;
         }
 
         .container {
-            background: #8acfff;
+            background: #37e9bb;
             text-align: left;
             border-top-right-radius: 12px;
             border-bottom-right-radius: 12px;
