--- a/quiz.html
+++ b/quiz.html
@@ -17,10 +17,10 @@
             <div id="container"></div>
             <div class="row" style="margin-top: 15px;">
                 <div class="col">
-                    <button class="btn btn-info" id="previous" onclick="previous()">&#8592;</button>
+                    <button class="btn btn-purple" id="previous" onclick="previous()">&#8592;</button>
                 </div>
                 <div class="col">
-                    <button class="btn btn-info" id="next" onclick="next()">&#8594;</button>
+                    <button class="btn btn-purple" id="next" onclick="next()">&#8594;</button>
                 </div>
             </div>
         </div>
