--- a/flashcard.html
+++ b/flashcard.html
@@ -12,11 +12,8 @@
 
 <body>
     <div class="container">
-        <h1 id="unit"></h1><br />
-        <div class="tab-content">
-            <div class="card-container" id="container"></div>
-        </div>
-
+        <h1 id="unit"></h1>
+        <div class="tab-content" id="container"></div>
         <div class="row" style="padding: 0 10px;">
             <div class="col-3 action">
                 <button class="btn btn-danger" onclick="rate(1)">Again</button>
@@ -38,7 +35,7 @@
             </div>
         </div>
 
-        <div class="row" style="margin-top: 15px;">
+        <div class="row">
             <div class="col pagination" id="pagination">
               </div>
         </div>
