--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             background: black;
             display: flex;
             padding: 15px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgb(255 255 255 / 10%);
         }
 
         .title {
-            background: #6745fd;
+            background: #5468ff;
             border-top-left-radius: 12px;
             border-bottom-left-radius: 12px;
         }
 
         .container {
-            background: #37e9bb;
+            background: #232148;
             text-align: left;
             border-top-right-radius: 12px;
             border-bottom-right-radius: 12px;
