--- a/quiz.html
+++ b/quiz.html
@@ -13,20 +13,18 @@
 <body>
     <div class="container">
         <h1 id="unit"></h1>
-        <div class="tab-content">
-            <div id="container"></div>
-            <div class="row" style="margin-top: 15px;">
-                <div class="col">
-                    <button class="btn btn-purple" id="previous" onclick="previous()">&#8592;</button>
-                </div>
-                <div class="col">
-                    <button class="btn btn-purple" id="next" onclick="next()">&#8594;</button>
-                </div>
+        <div class="tab-content" id="container"></div>
+        <div class="row" style="margin-top: 15px;">
+            <div class="col">
+                <button class="btn btn-purple" id="previous" onclick="previous()">&#8592;</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-purple" id="next" onclick="next()">&#8594;</button>
             </div>
         </div>
         <div class="row" style="margin-top: 15px;">
             <div class="col pagination" id="pagination">
-              </div>
+            </div>
         </div>
     </div>
 
