--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <button class="close-button" onclick="closePage()"></button>
         <h1 id="unit"></h1>
         <div class="tab-content" id="container"></div>
         <div class="row" style="margin-top: 15px;">
