--- a/story.html
+++ b/story.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <button class="close-button" onclick="closePage()"></button>
         <div id="container">
         </div>
         <div class="row" style="margin-bottom: 20px">
