--- a/vocabularies.html
+++ b/vocabularies.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <button class="close-button" onclick="closePage()"></button>
     <h1 id="book"></h1>
     <div class="container" id="container"></div>
 
