--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
                 <button class="btn btn-purple" id="next" onclick="next()">&#8594;</button>
             </div>
         </div>
-        <div class="row" style="margin-top: 15px;">
+        <div class="row" style="margin-top: 20px;">
             <div class="col pagination" id="pagination">
             </div>
         </div>
@@ -31,7 +31,11 @@
 
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/quiz.js"></script>
-
 </body>
+
+<div id="popup" class="popup">
+    <p style="font-size: x-large;">Quiz completed!</p>
+    <button class="btn close-btn" onclick="hidePopup()">Close</button>
+</div>
 
 </html>
