Add Scramble word feature

--- a/unit.html
+++ b/unit.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <button class="close-button" onclick="back()"></button>
         <h1 id="unit"></h1>
         <div class="row" style="margin-top: 15px; padding: 0 10px;">
             <div class="col-6 action">
@@ -36,8 +37,9 @@
                 </button>
             </div>
             <div class="col-6 action">
-                <button class="btn btn-basic" onclick="back()">
-                    <img src="assets/images/back.png">
+                <button class="btn btn-basic" onclick="openScrambleWords()">
+                    <img src="assets/images/scrabble.png">
+                    Scramble Words
                 </button>
             </div>
         </div>
