--- a/flashcard-list.html
+++ b/flashcard-list.html
@@ -5,7 +5,7 @@
     <title>4000 essential english words</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/flashcard-list.css">
 </head>
