--- a/flashcard.html
+++ b/flashcard.html
@@ -17,25 +17,25 @@
         <div class="tab-content" id="container"></div>
         <div class="row" style="padding: 0 10px;">
             <div class="col-3 action">
-                <button class="btn btn-danger" onclick="rate(0)">Again</button>
+                <button class="btn btn-danger update-card" onclick="rate(0)">Again</button>
             </div>
             <div class="col-3 action">
-                <button class="btn btn-warning" onclick="rate(1)">Hard</button>
+                <button class="btn btn-warning update-card" onclick="rate(1)">Hard</button>
             </div>
             <div class="col-3 action">
-                <button class="btn btn-success" onclick="rate(2)">Good</button>
+                <button class="btn btn-success update-card" onclick="rate(2)">Good</button>
             </div>
             <div class="col-3 action">
-                <button class="btn btn-info" onclick="rate(3)">Easy</button>
+                <button class="btn btn-info update-card" onclick="rate(3)">Easy</button>
             </div>
         </div>
 
         <div class="row" style="margin-top: 20px; padding: 0 10px;">
             <div class="col action">
-                <button class="btn btn-white" onclick="editWord()">Edit</button>
+                <button class="btn btn-white update-card" onclick="editWord()">Edit</button>
             </div>
             <div class="col action">
-                <button class="btn btn-basic" onclick="memorizeCard()">Memorized</button>
+                <button class="btn btn-basic update-card" onclick="memorizeCard()">Memorized</button>
             </div>
         </div>
 
