--- a/flashcard.html
+++ b/flashcard.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/flashcard.css">
 </head>
@@ -41,7 +42,7 @@
 
         <div class="row">
             <div class="col pagination" id="pagination">
-              </div>
+            </div>
         </div>
     </div>
 
@@ -67,6 +68,7 @@
     </div>
 
     <script type="text/javascript" src="scripts/master.js"></script>
+    <script type="text/javascript" src="scripts/tts.js"></script>
     <script type="text/javascript" src="scripts/flashcard.js"></script>
 </body>
 
