Add Speech Assessment

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div>
             <p><a href="flashcard-list.html">4000 essential english words</a></p>
             <p><a href="sentences.html">Sentences</a></p>
+            <p><a href="stt.html">Speech to Text</a></p>
+            <p><a href="tts.html">Text to Speech</a></p>
+            <p><a href="speech-assessment.html">Speech Assessment</a></p>
         </div>
     </div>
 </body>
