Add Speech Assessment feature

--- a/scramble-words.html
+++ b/scramble-words.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/scramble-words.js"></script>
 </body>
