--- a/flashcard-list.html
+++ b/flashcard-list.html
@@ -5,7 +5,8 @@
     <title>4000 essential english words</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/flashcard-list.css">
 </head>
@@ -15,6 +16,7 @@
     <div class="container" id="container">
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/flashcard-list.js"></script>
 
