--- a/flashcard.html
+++ b/flashcard.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/flashcard.css">
 </head>
@@ -67,6 +67,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/tts.js"></script>
     <script type="text/javascript" src="scripts/flashcard.js"></script>
