--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,8 @@
             </div>
         </div>
     </div>
-
+    
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/quiz.js"></script>
 </body>
