--- a/story.html
+++ b/story.html
@@ -27,6 +27,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/story.js"></script>
 
