--- a/unit.html
+++ b/unit.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -17,13 +17,13 @@
         <div class="row" style="margin-top: 15px; padding: 0 10px;">
             <div class="col-6 action">
                 <button class="btn btn-info" onclick="openFlashcard()">
-                    <img src="assets/images/flashcard.png">
+                    <img src="assets/images/flashcard.png" />
                     Flashcard
                 </button>
             </div>
             <div class="col-6 action">
                 <button class="btn btn-purple" onclick="openQuiz()">
-                    <img src="assets/images/quiz.png">
+                    <img src="assets/images/quiz.png" />
                     Quiz
                 </button>
             </div>
@@ -32,24 +32,38 @@
         <div class="row" style="margin-top: 15px; padding: 0 10px;">
             <div class="col-6 action">
                 <button class="btn btn-success" onclick="openStory()">
-                    <img src="assets/images/story.png">
+                    <img src="assets/images/story.png" />
                     Story
                 </button>
             </div>
             <div class="col-6 action">
-                <button class="btn btn-basic" onclick="openScrambleWords()">
-                    <img src="assets/images/scrabble.png">
+                <button class="btn btn-warning" onclick="openScrambleWords()">
+                    <img src="assets/images/scrabble.png" />
                     Scramble Words
                 </button>
             </div>
         </div>
 
+        <div class="row" style="margin-top: 15px; padding: 0 10px;">
+            <div class="col-6 action">
+                <button class="btn btn-orange" onclick="openSpeechAssessment()">
+                    <img src="assets/images/speaking.png" />
+                    Speech Assessment
+                </button>
+            </div>
+            <div class="col-6 action">
+                <button class="btn btn-basic" onclick="back()">
+                    <img src="assets/images/back.png" />
+                </button>
+            </div>
+        </div>
+
         <div class="row" style="margin-top: 20px;">
-            <div class="col pagination" id="pagination">
-              </div>
+            <div class="col pagination" id="pagination"></div>
         </div>
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/unit.js"></script>
 </body>
