--- a/vocabularies.html
+++ b/vocabularies.html
@@ -15,6 +15,7 @@
     <div class="container" id="container"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/vocabularies.js"></script>
 
