--- a/speech-assessment.html
+++ b/speech-assessment.html
@@ -23,10 +23,10 @@
         <div class="tab-content" id="container">
             <div class="word-info" id="word-info"></div>
             <div class="audio">
-                <button class="btn btn-white circle" onclick="speech()" style="margin-right: 5px;">
+                <button class="btn btn-white circle" id="open-sound" onclick="speech()" style="margin-right: 5px;">
                     <i class="fa-solid fa-volume-high"></i>
                 </button>
-                <button class="btn btn-white circle" onclick="listen()">
+                <button class="btn btn-white circle" id="listen-voice" onclick="listen()">
                     <i class="fa-solid fa-ear-listen"></i>
                 </button>
             </div>
