--- a/speech-assessment.html
+++ b/speech-assessment.html
@@ -74,6 +74,8 @@
     <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/sha.js"></script>
+    <script type="text/javascript" src="scripts/iload.js"></script>
+    <script type="text/javascript" src="scripts/record.js"></script>
     <script type="text/javascript" src="scripts/speech-assessment.js"></script>
 </body>
 
