--- a/speech-assessment.html
+++ b/speech-assessment.html
@@ -57,7 +57,7 @@
             <button class="btn btn-white icon-recorder record-btn" id="start-record" onclick="startRecord()">
                 <i class="fa-light fa-microphone"></i>
             </button>
-            <button class="btn btn-white icon-recorder record-btn" style="display: none;" id="stop-record"
+            <button class="btn btn-danger icon-recorder record-btn"id="stop-record"
                 onclick="stopRecord()">
                 <i class="fa-light fa-waveform-lines"></i>
             </button>
@@ -73,7 +73,6 @@
 
     <script type="text/javascript" src="scripts/constant.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
-    <script type="text/javascript" src="scripts/sha.js"></script>
     <script type="text/javascript" src="scripts/iload.js"></script>
     <script type="text/javascript" src="scripts/record.js"></script>
     <script type="text/javascript" src="scripts/speech-assessment.js"></script>
