--- a/text-to-speech.html
+++ b/text-to-speech.html
@@ -3,26 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to Speech</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/master.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-
         .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
+            background-color: #232148;
+            padding: 50px 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
         }
 
         input[type="text"] {
@@ -33,18 +24,10 @@
             border-radius: 4px;
         }
 
-        button {
-            padding: 10px 20px;
-            border: none;
-            background-color: #007bff;
-            color: #fff;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
+        .btn {
+            width: fit-content;
+            font-size: 15px;
+            font-weight: bold;
         }
 
         audio {
@@ -59,33 +42,35 @@
         <h1>Text to Speech</h1>
         <audio controls id="audio"></audio>
         <input id="input-text" type="text" placeholder="Enter text here" /><br />
-        <button type="button" onclick="fetchData()">Generate</button>
+        <div>
+            <input type="radio" id="en-us" checked name="language-code" value="en-US" />
+            <label for="html" style="margin-right: 10px;">English</label>
+            <input type="radio" name="language-code" value="vi-VN" />
+            <label for="css">Vietnamese</label>
+        </div>
+        <button class="btn btn-info" type="button" onclick="fetchData()">Generate</button>
     </div>
 
+    <script type="text/javascript" src="scripts/constant.js"></script>
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script>
         const fetchData = async () => {
             const inputText = document.getElementById('input-text').value;
-            const headers = {
-                "Content-Type": "application/json; charset=UTF-8"
-            };
-
+            const isEn = document.getElementById('en-us').checked;
             const body = {
-                audioFormat: "mp3",
+                audioFormat: TEXT_TO_SPEECH.AUDIO_TYPE,
                 paragraphChunks: [inputText],
-                voiceParams: {
-                    name: "snoop",
-                    engine: "resemble",
-                    languageCode: "en-US"
-                    // engine: "azure",
-                    // languageCode: "vi-VN",
-                    // name: "hoaimy"
-                }
+                voiceParams: isEn
+                    ? TEXT_TO_SPEECH.EN_OPTION
+                    : TEXT_TO_SPEECH.VI_OPTION
             };
 
             try {
-                const response = await fetch("https://audio.api.speechify.com/generateAudioFiles", {
+                const response = await fetch(TEXT_TO_SPEECH.BASE_URL, {
                     method: "POST",
-                    headers: headers,
+                    headers: {
+                        "Content-Type": "application/json; charset=UTF-8"
+                    },
                     body: JSON.stringify(body)
                 });
 
@@ -96,7 +81,7 @@
                 const data = await response.json();
                 const audioStream = data.audioStream;
                 const audio = document.getElementById('audio');
-                audio.src = `data:audio/mp3;base64,${audioStream}`;
+                audio.src = `data:audio/${body.audioFormat};base64,${audioStream}`;
             } catch (error) {
                 console.error("Error fetching data:", error);
             }
