--- a/pages/4000-enssential-english-words/speech-assessment.html
+++ b/pages/4000-enssential-english-words/speech-assessment.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/speech-assessment.css">
+    <link rel="stylesheet" href="../../css/all.min.css">
+    <link rel="stylesheet" href="../../css/master.css">
+    <link rel="stylesheet" href="../../css/4000-enssential-english-words/speech-assessment.css">
 </head>
 
 <body>
@@ -46,7 +46,6 @@
             </div>
         </div>
         <audio id="record-audio"></audio>
-        <audio id="record-sound" src="assets/audios/record.mp3"></audio>
     </div>
 
     <div class="footer">
@@ -71,11 +70,11 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="scripts/constant.js"></script>
-    <script type="text/javascript" src="scripts/master.js"></script>
-    <script type="text/javascript" src="scripts/iload.js"></script>
-    <script type="text/javascript" src="scripts/record.js"></script>
-    <script type="text/javascript" src="scripts/speech-assessment.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/iload.js"></script>
+    <script type="text/javascript" src="../../scripts/record.js"></script>
+    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
 </body>
 
 </html>
