--- a/pages/sentences.html
+++ b/pages/sentences.html
@@ -3,18 +3,19 @@
 
 <head>
     <title>Sentences</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/sentences.css">
+    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" href="../css/all.min.css">
+    <link rel="stylesheet" href="../css/sentences.css">
 </head>
 
 <body>
     <h1>Sentences</h1><br />
     <div class="container">
+        <button class="close-button" onclick="backToHome()"></button>
         <div class="row">
             <div class="col">
                 <button class="btn btn-info" type="button" disabled id="show-all">Flip all</button>
@@ -35,10 +36,10 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="scripts/constant.js"></script>
-    <script type="text/javascript" src="scripts/master.js"></script>
-    <script type="text/javascript" src="scripts/tts.js"></script>
-    <script type="text/javascript" src="scripts/sentences.js"></script>
+    <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/master.js"></script>
+    <script type="text/javascript" src="../scripts/tts.js"></script>
+    <script type="text/javascript" src="../scripts/sentences.js"></script>
 </body>
 
 </html>
