--- a/index.html
+++ b/index.html
@@ -3,50 +3,56 @@
 
 <head>
     <title>Study English</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="css/master.css">
-    <style>
-        .content {
-            color: white;
-            height: 80%;
-            align-items: center;
-            background: black;
-            display: flex;
-            padding: 15px;
-            box-shadow: 0 0 20px rgb(255 255 255 / 10%);
-        }
-
-        .title {
-            background: #5468ff;
-            border-top-left-radius: 12px;
-            border-bottom-left-radius: 12px;
-        }
-
-        .container {
-            background: #232148;
-            text-align: left;
-            border-top-right-radius: 12px;
-            border-bottom-right-radius: 12px;
-        }
-
-        a {
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
-    <h1 class="content title">Study English</h1>
-    <div class="container content" id="container">
-        <div>
-            <p><a href="flashcard-list.html">4000 essential english words</a></p>
-            <p><a href="sentences.html">Sentences</a></p>
-            <p><a href="speech-to-text.html">Speech to Text</a></p>
-            <p><a href="text-to-speech.html">Text to Speech</a></p>
+    <div class="container">
+        <h1>Study English</h1>
+        <div class="row" style="margin-top: 15px; padding: 0 10px;">
+            <div class="col-6 action">
+                <button class="btn btn-info" onclick="openEssential()">
+                    <img src="assets/images/book.png" />
+                    4000 essential english words
+                </button>
+            </div>
+            <div class="col-6 action">
+                <button class="btn btn-purple" onclick="openSentences()">
+                    <img src="assets/images/sentences.png" />
+                    Sentences
+                </button>
+            </div>
+        </div>
+
+        <div class="row" style="margin-top: 15px; padding: 0 10px;">
+            <div class="col-6 action">
+                <button class="btn btn-success" onclick="openSTT()">
+                    <img src="assets/images/speech-to-text.png" />
+                    Speech to Text
+                </button>
+            </div>
+            <div class="col-6 action">
+                <button class="btn btn-warning" onclick="openTTS()">
+                    <img src="assets/images/text-to-speech.png" />
+                    Text to Speech
+                </button>
+            </div>
         </div>
     </div>
+
+    <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/master.js"></script>
+    <script>
+        const openEssential = () => location.href = `${PATH.ESSENTIAL_ROUTE}flashcard-list.html`;
+        const openSentences = ()  => location.href = `${PATH.DEFAULT_ROUTE}sentences.html`;
+        const openSTT = () => location.href = `${PATH.DEFAULT_ROUTE}speech-to-text.html`;
+        const openTTS = () => location.href = `${PATH.DEFAULT_ROUTE}text-to-speech.html`;
+    </script>
 </body>
 
 </html>
