--- a/pages/4000-enssential-english-words/flashcard.html
+++ b/pages/4000-enssential-english-words/flashcard.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/flashcard.css">
+    <link rel="stylesheet" href="../../css/all.min.css">
+    <link rel="stylesheet" href="../../css/master.css">
+    <link rel="stylesheet" href="../../css/4000-enssential-english-words/flashcard.css">
 </head>
 
 <body>
@@ -67,10 +67,11 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="scripts/constant.js"></script>
-    <script type="text/javascript" src="scripts/master.js"></script>
-    <script type="text/javascript" src="scripts/tts.js"></script>
-    <script type="text/javascript" src="scripts/flashcard.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/tts.js"></script>
+    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard.js"></script>
+
 </body>
 
 </html>
