--- a/pages/4000-enssential-english-words/story.html
+++ b/pages/4000-enssential-english-words/story.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Story</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/story.css">
+    <link rel="stylesheet" href="../../css/master.css">
+    <link rel="stylesheet" href="../../css/4000-enssential-english-words/story.css">
 </head>
 
 <body>
@@ -27,9 +27,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="scripts/constant.js"></script>
-    <script type="text/javascript" src="scripts/master.js"></script>
-    <script type="text/javascript" src="scripts/story.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/story.js"></script>
 
 </body>
 
