--- a/pages/speech-to-text.html
+++ b/pages/speech-to-text.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speech to Text</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
     <style>
         .container {
             background-color: #232148;
@@ -37,6 +37,7 @@
 </head>
 
 <body>
+    <button class="close-button" onclick="backToHome()"></button>
     <div class="container">
         <h1>Speech to Text</h1>
         <div id="output">Your transcribed text will appear here...</div><br />
@@ -79,6 +80,10 @@
             outputDiv.textContent = `Error: ${event.error}`;
             startButton.disabled = false;
         });
+
+        const backToHome = () => {
+            location.href = '../';
+        }
     </script>
 </body>
 
