--- a/pages/4000-enssential-english-words/scramble-words.html
+++ b/pages/4000-enssential-english-words/scramble-words.html
@@ -35,9 +35,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../../scripts/constant.js"></script>
-    <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/scramble-words.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/4000-enssential-english-words/scramble-words.js"></script>
 </body>
 
 <div id="popup" class="popup">
