--- a/pages/4000-enssential-english-words/story.html
+++ b/pages/4000-enssential-english-words/story.html
@@ -27,9 +27,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../../scripts/constant.js"></script>
-    <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/story.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/4000-enssential-english-words/story.js"></script>
 
 </body>
 
