--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="scripts/constant.js"></script>
-    <script type="text/javascript" src="scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="scripts/master.js"></script>
     <script>
         const openEssential = () => location.href = `${PATH.ESSENTIAL_ROUTE}flashcard-list.html`;
         const openSentences = ()  => location.href = `${PATH.DEFAULT_ROUTE}sentences.html`;
