--- a/pages/4000-enssential-english-words/flashcard.html
+++ b/pages/4000-enssential-english-words/flashcard.html
@@ -67,10 +67,10 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../../scripts/constant.js"></script>
-    <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script type="text/javascript" src="../../scripts/tts.js"></script>
-    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/tts.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard.js"></script>
 
 </body>
 
