--- a/pages/4000-enssential-english-words/speech-assessment.html
+++ b/pages/4000-enssential-english-words/speech-assessment.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header" id="header">
         <h1 id="unit"></h1>
         <button class="close-button" onclick="closePage()"></button>
     </div>
     <div id="progress">
         <div id="progress-bar"></div>
-      </div>
+    </div>
     <div class="container">
         <div class="tab-content" id="container">
             <div class="word-info" id="word-info"></div>
@@ -37,8 +37,10 @@
             <div id="result" class="result-container" style="display: none;">
                 <div class="progress-container">
                     <svg class="progress-ring" width="150" height="150">
-                        <circle class="progress-ring__background" stroke-width="8" fill="transparent" r="60" cx="75" cy="75"></circle>
-                        <circle id="progress-ring-circle" class="progress-ring__circle" stroke-width="8" fill="transparent" r="60" cx="75" cy="75" transform="rotate(-270 75 75)"></circle>
+                        <circle class="progress-ring__background" stroke-width="8" fill="transparent" r="60" cx="75"
+                            cy="75"></circle>
+                        <circle id="progress-ring-circle" class="progress-ring__circle" stroke-width="8"
+                            fill="transparent" r="60" cx="75" cy="75" transform="rotate(-270 75 75)"></circle>
                     </svg>
                     <div class="progress-text" id="progress-text">0</div>
                 </div>
@@ -48,7 +50,7 @@
         <audio id="record-audio"></audio>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="record-dock">
             <button class="btn btn-purple circle" id="previous" onclick="previous()">
                 <i class="fa-solid fa-angle-left"></i>
@@ -56,8 +58,7 @@
             <button class="btn btn-white icon-recorder record-btn" id="start-record" onclick="startRecord()">
                 <i class="fa-light fa-microphone"></i>
             </button>
-            <button class="btn btn-danger icon-recorder record-btn"id="stop-record"
-                onclick="stopRecord()">
+            <button class="btn btn-danger icon-recorder record-btn" id="stop-record" onclick="stopRecord()">
                 <i class="fa-light fa-waveform-lines"></i>
             </button>
             <button class="btn btn-purple circle" id="next" onclick="next()">
@@ -69,12 +70,16 @@
             </div>
         </div>
     </div>
+    <div id="popup" class="popup">
+        <p id="notify-content" style="font-size: large; margin-bottom: 0;"></p>
+        <button class="btn close-btn" onclick="hidePopup()">Close</button>
+    </div>
 
-    <script type="text/javascript" src="../../scripts/constant.js"></script>
-    <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script type="text/javascript" src="../../scripts/iload.js"></script>
-    <script type="text/javascript" src="../../scripts/record.js"></script>
-    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/iload.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/record.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
 </body>
 
 </html>
