--- a/pages/4000-enssential-english-words/vocabularies.html
+++ b/pages/4000-enssential-english-words/vocabularies.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/master.css">
     <link rel="stylesheet" href="../../css/4000-enssential-english-words/vocabularies.css">
 </head>
@@ -15,9 +16,10 @@
     <div class="container" id="container"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../scripts/constant.js"></script>
-    <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/vocabularies.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/constant.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/master.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/tts.js"></script>
+    <script defer asynctype="text/javascript" src="../../scripts/4000-enssential-english-words/vocabularies.js"></script>
 
 </body>
 
